--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
         <v-container>Hello world</v-container>
       </v-content>
     </v-app>
+    <h1>Yuki change</h1>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
